Improved expressions package (#822)