@@ -6,6 +6,7 @@ import com.dat3m.dartagnan.expression.integers.IntBinaryOp;
 import com.dat3m.dartagnan.expression.type.*;
 import com.dat3m.dartagnan.parsers.LLVMIRBaseVisitor;
 import com.dat3m.dartagnan.parsers.LLVMIRParser.*;
+import com.dat3m.dartagnan.parsers.program.ParserInlineAsm;
 import com.dat3m.dartagnan.parsers.program.utils.ProgramBuilder;
 import com.dat3m.dartagnan.program.Function;
 import com.dat3m.dartagnan.program.Program;
@@ -19,9 +20,11 @@ import com.dat3m.dartagnan.program.event.metadata.SourceLocation;
 import com.dat3m.dartagnan.program.memory.Memory;
 import com.dat3m.dartagnan.program.memory.MemoryObject;
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
-
+import org.antlr.v4.runtime.CharStream;
+import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.tree.TerminalNode;
 import org.apache.logging.log4j.LogManager;
@@ -31,11 +34,7 @@ import java.math.BigInteger;
 import java.util.*;
 import java.util.stream.Collectors;
 
-
-import org.antlr.v4.runtime.CharStream;
-import org.antlr.v4.runtime.CharStreams;
-
-import com.dat3m.dartagnan.parsers.program.ParserInlineAsm;
+import static com.dat3m.dartagnan.expression.utils.ExpressionHelper.isAggregateLike;
 import static com.dat3m.dartagnan.program.event.EventFactory.*;
 import static com.dat3m.dartagnan.program.event.EventFactory.Llvm.newCompareExchange;
 import static com.google.common.base.Preconditions.checkState;
@@ -44,6 +43,7 @@ import static com.google.common.base.Verify.verify;
 public class VisitorLlvm extends LLVMIRBaseVisitor<Expression> {
 
     private static final Logger logger = LogManager.getLogger(VisitorLlvm.class);
+    private static final String DEFAULT_ENTRY_FUNCTION = "main";
 
     // Global context
     private final Program program = new Program(new Memory(), Program.SourceLanguage.LLVM, null);
@@ -68,7 +68,6 @@ public class VisitorLlvm extends LLVMIRBaseVisitor<Expression> {
     private String currentRegisterName;
     // Nonnull, if a type has been parsed.
     private Type parsedType;
-    private final String DEFAULT_ENTRY_FUNCTION = "main";
 
     public VisitorLlvm() {}
 
@@ -670,13 +669,23 @@ public class VisitorLlvm extends LLVMIRBaseVisitor<Expression> {
     @Override
     public Expression visitExtractValueInst(ExtractValueInstContext ctx) {
         final Type type = parseType(ctx.typeValue().firstClassType());
-        check(type instanceof AggregateType, "Non-aggregate type in %s.", ctx);
-        Expression expression = checkExpression(type, ctx.typeValue().value());
-        for (final TerminalNode literalNode : ctx.IntLit()) {
-            final int index = Integer.parseInt(literalNode.getText());
-            expression = expressions.makeExtract(index, expression);
-        }
-        return assignToRegister(expression);
+        check(isAggregateLike(type), "Non-aggregate type in %s.", ctx);
+        final Expression aggregate = checkExpression(type, ctx.typeValue().value());
+        final ImmutableList<Integer> indices =
+                ctx.IntLit().stream().map(n -> Integer.parseInt(n.getText())).collect(ImmutableList.toImmutableList());
+        return assignToRegister(expressions.makeExtract(aggregate, indices));
+    }
+
+    @Override
+    public Expression visitInsertValueInst(InsertValueInstContext ctx) {
+        final Type typeAgg = parseType(ctx.typeValue(0));
+        final Type insertType = parseType(ctx.typeValue(1));
+        check(isAggregateLike(typeAgg), "Non-aggregate type in %s.", ctx);
+        final Expression aggregate = checkExpression(typeAgg, ctx.typeValue(0));
+        final Expression insertValue = checkExpression(insertType, ctx.typeValue(1));
+        final ImmutableList<Integer> indices =
+                ctx.IntLit().stream().map(n -> Integer.parseInt(n.getText())).collect(ImmutableList.toImmutableList());
+        return assignToRegister(expressions.makeInsert(aggregate, insertValue, indices));
     }
 
     @Override
@@ -1415,7 +1424,7 @@ public class VisitorLlvm extends LLVMIRBaseVisitor<Expression> {
         @Override
         default <T> T accept(ExpressionVisitor<T> visitor) { throw new UnsupportedOperationException(); }
         @Override
-        default List<Expression> getOperands() { return List.of(); }
+        default ImmutableList<Expression> getOperands() { return ImmutableList.of(); }
         @Override
         default ExpressionKind getKind() { return MdKind; }
     }
